Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18307 2018-02-17 marcel Release v2.2.1
   Fix blocking 10 Minutes for many slow callback clients
   Reworked DispatchWorkerPool.java, see Javadoc
   SocketCallbackImpl.java changed to be a daemon thread

 o 18298 2018-02-06 michele/marcel
   Change default DispatchWorker pool thread size from 5 to 20(server side) and 1(client side)
   Configure client side thread now with parameter "createThreadsClient"

 o 18296 2018-01-25 michele/marcel
   Better cleanup of resources on java client side connection
   to prevent a race condition loop of socket connection to server
    
 o 18294 2018-01-12 michele
   on the replication fixed a loop occurring under specific circumstances in ORACLE when checking if to escape a column
 
 o 18290 2017-12-22 marcel
   Added killSessionNoThrow and killClientNoThrow for JMX
   NPE Fix in ContextNode.java
 
 o 18287 2017-11-08 michele
   Removed sychronized in SocketUrl which led to a deadlock when multiple threads where creating a SSL Socket

 o 18286 2017-11-01 marcel
   Avoid that EvenPlugin triggers a remote cluster node connection if none existed

 o 18282 2017-10-06 michele
   added IPv6 support by adding HelperIPv6And4.java and using it when parsing urls.

 o 18279 2017-08-10 michele
   fixed DB leak when logging out with more entries than the cache in callback queue

 o 18277 2017-07-14 michele
   Replication: added a getter for SqlRow

 o 18276 2017-07-14 michele
   handling multiple SSL certificates (if the client has to use another) 

 o 18275 2017-07-14 michele
   logging all threads in case of a concurrent exception leading to panic 

 o 18273 2017-07-02 marcel
   QosData.hasClientProperty() added
   SessionInfo.removeUserObject() added
   DropIfNotDeliverableUniqueOnly.useTimestampCheck configuration property added
   
 o 18270 18271 18272 2017-06-22 marcel